[package]
name = "flash-bootstrapped-leverage"
version = "0.1.0"
edition = "2021"

[dependencies]
# Solana core
solana-program = "~1.18.0"
solana-sdk = "~1.18.0"
solana-client = "~1.18.0"
solana-account-decoder = "~1.18.0"

# Anchor framework
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"

# SPL Token
spl-token = "4.0.0"
spl-associated-token-account = "2.3.0"

# Math and utilities
borsh = "0.10.0"
bytemuck = { version = "1.14.0", features = ["derive"] }
num-derive = "0.4"
num-traits = "0.2"
thiserror = "1.0"

# HTTP client for Jupiter API
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

# Decimal math
rust_decimal = "1.33"
rust_decimal_macros = "1.33"

# Base64 encoding
base64 = "0.21"

[dev-dependencies]
solana-program-test = "~1.18.0"
tokio-test = "0.4"

[lib]
crate-type = ["cdylib", "lib"]
name = "flash_bootstrapped_leverage"

[[bin]]
name = "flash-leverage-client"
path = "src/client.rs"