[package]
name = "flash-leveraged-scheme"
version = "0.1.0"
description = "Flash loan leveraged token scheme on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "flash_leveraged_scheme"

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
spl-token = "3.5.0"
solana-program = "1.16.0"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []